--- a/view/layout.css
+++ b/view/layout.css
@@ -123,13 +123,25 @@ section h2{
 	padding-bottom:20px;
 	
 }
+section h2 input{
+	font-size: inherit;
+}
 .songbox{
 	margin:0;
 	padding:0;
-	width:100%
+	width:100%;
+	line-height:0;
 }
+section textarea{
+	float:left;
+	width:80%;
+	height: calc(var(--fullheight) - 130px);
+}
+
 pre{
     white-space: pre-wrap;
+	margin:0;
+	padding:0;
 }
 .chord{
 	color:var(--dorange);
@@ -155,10 +167,13 @@ pre{
 	border-radius:20px;
 	box-shadow:0px 0px 3px ;
 }
-#editmenu{
+#editmenu {
 	bottom: 80px;
 	padding: 7.5px;
 }
+#savemenu {
+	 padding: 7.5px;
+ }
 .hovermenu ul{
 	list-style-type:none;
 	display:flex;
@@ -181,13 +196,13 @@ pre{
 	height:20px;
 	margin-left:5px;
 }
-#editmenu ul li button{
+#editmenu ul li button, #savemenu ul li button{
 	border-radius:13px;
 	height:25px;
 	margin:0 2.5px;
 	padding: 0 5px;
  }
-#editmenu ul li .buttons{
+#editmenu ul li .buttons, #savemenu ul li .buttons{
 	margin:0 15px;
 }
 #transposemenu ul li .buttons{
