--- a/view/layout.css
+++ b/view/layout.css
@@ -123,7 +123,7 @@ section h2{
 	padding-bottom:20px;
 	
 }
-section h2 input{
+section h2 input, section h2 select{
 	font-size: inherit;
 }
 .songbox{
