--- a/view/layout.css
+++ b/view/layout.css
@@ -26,6 +26,10 @@ header{
 	padding:30px;
 	background-color: var(--green);
 }
+header a{
+	text-decoration: none;
+	color:inherit;
+}
 header h1{
 	background-color:inherit;
 	text-transform:uppercase;
@@ -235,5 +239,9 @@ footer p{
 	height: 50px;
 	font-size: 18px;
 	border-radius: 25px;
+}
 
+img {
+    display: block;
+    margin:auto;
 }
